--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,26 @@
 [build-system]
-requires = ["setuptools >= 40.6.0", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
+name = "okfasta"
+version = "0.0.2"
+authors = [
+  { name="Kyle Bittinger", email="kylebittinger@gmail.com" },
+]
+description = "FASTA utilities"
+readme = "README.md"
+requires-python = ">=3.7"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
+
+[project.urls]
+"Homepage" = "https://github.com/kylebittinger/okfasta"
+"Bug Tracker" = "https://github.com/kylebittinger/okfasta/issues"
+
+[project.scripts]
+"okfasta" = "okfastalib.command:okfasta_main"
+"msa-ok" = "okfastalib.command:msa_ok_main"
